--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
       </ul>
 
     </section>
-    <script src="http://unpkg.com/jquery"></script>
+    <!-- <script src="http://unpkg.com/jquery"></script> -->
     <script src="https://unpkg.com/axios@0.19.0/dist/axios.js"></script>
     <script src="/static/boggle.js"></script>
     <script>
